# pylon-experiments

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
data/bpic2012/constraints/: constraints.vacuous_as_violated_false.activity_support_50.constraint_support_100.declare  constraints.vacuous_as_violated_false.activity_support_50.constraint_support_100.txt
data/bpic2012/datasets/: test.csv  test.traces.pkl  train.csv  train.traces.pkl  val.csv  val.traces.pkl
data/bpic2012/extracted/: constraints.txt  constraints_100.txt  constraints_70_80.txt  constraints_80_90.txt  info.csv  traces.csv  vocab.csv  vocab.pkl
data/bpic2012/origin/: constraints.declare  constraints.txt
data/bpic2017/constraints/: constraints.vacuous_as_violated_false.activity_support_50.constraint_support_100.txt
data/bpic2017/extracted/: constraints.txt  constraints_100.txt  constraints_70_80.txt  constraints_80_90.txt  constraints_90_100.txt  vocab.csv  vocab.pkl
data/bpic2017/origin/: constraints.txt
data/helpdesk/extracted/: constraints.txt  constraints_70_80.txt  constraints_80_90.txt  (+3 more)
data/hospital/: constraints.txt
notebooks/: constraint_loop.ipynb  constraints.ipynb  dataloader.ipynb  dataset.ipynb  notebook.ipynb
notebooks/bpic2012/: baseline_evaluation.ipynb  constraints.ipynb  evaluation.ipynb  log.ipynb  plots.ipynb  test.ipynb
notebooks/helpdesk/: evaluation.ipynb
pylon_experiments/: __main__.py  args.py  post_train.py
pylon_experiments/data/: dataset.py  loader.py  log_dataset.py  trace_dataset.py  vocab.py
pylon_experiments/model/: model.py
pylon_experiments/scripts/: args.py  post_training.py
tests/data/: test_trace_dataset.py  test_vocab.py
(+2450 files in other folders)
