[tool.poetry]
name = "pylon-experiments"
version = "0.1.0"
description = ""
authors = ["salvatore <salvatorelaiso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.6"
tqdm = "^4.67.1"
torchmetrics = "^1.6.1"
pyxdameraulevenshtein = "^1.8.0"
pylon-lib = "^0.1.0"
declare4pylon = {git = "https://github.com/salvatorelaiso/declare4pylon.git"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
tensorboard = "^2.19.0"
tensorboardx = "^2.6.2.2"
standard-imghdr = "^3.13.0"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
